tests/logs/test_log_1784745277.txt
Arca Test Execution & Runtime Stdout Log
Timestamp: Wed Jul 22 18:34:37 UTC 2026
Unix Timestamp: 1784745277
=========================================
-----------------------------------------
Test Name: arithmetic.test.arca
File: tests/features/arithmetic.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/arithmetic.test.arca
15
30
Result: PASS
-----------------------------------------
Test Name: borrow.test.arca
File: tests/features/borrow.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/borrow.test.arca
42
Result: PASS
-----------------------------------------
Test Name: channel.test.arca
File: tests/features/channel.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/channel.test.arca
42
Result: PASS
-----------------------------------------
Test Name: comparison.test.arca
File: tests/features/comparison.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:47:3: error: expected identifier or '('
   47 |   return 0;
      |   ^
build/output.c:48:1: error: extraneous closing brace ('}')
   48 | }
      | ^
2 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: defer.test.arca
File: tests/features/defer.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/defer.test.arca
hello Alice
Result: PASS
-----------------------------------------
Test Name: enum.test.arca
File: tests/features/enum.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/enum.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: env.test.arca
File: tests/features/env.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/env.test.arca
0
Result: PASS
-----------------------------------------
Test Name: env_full.test.arca
File: tests/features/env_full.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:16:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   16 |   v3 = (int64_t)arca_current_dir();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: extend.test.arca
File: tests/features/extend.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/extend.test.arca
123
Result: PASS
-----------------------------------------
Test Name: for_loop.test.arca
File: tests/features/for_loop.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:11:8: error: call to undeclared function 'arca_path_path_extension'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   11 |   v0 = arca_path_path_extension((const char*)"/tmp/file.txt");
      |        ^
build/output.c:11:8: note: did you mean 'arca_path_extension'?
library/runtime/arca_runtime.h:113:13: note: 'arca_path_extension' declared here
  113 | const char* arca_path_extension(const char* path);
      |             ^
build/output.c:14:8: error: call to undeclared function 'arca_path_path_filename'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   14 |   v1 = arca_path_path_filename((const char*)"/tmp/file.txt");
      |        ^
build/output.c:14:8: note: did you mean 'arca_path_filename'?
library/runtime/arca_runtime.h:114:13: note: 'arca_path_filename' declared here
  114 | const char* arca_path_filename(const char* path);
      |             ^
build/output.c:17:8: error: call to undeclared function 'arca_path_path_parent'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   17 |   v2 = arca_path_path_parent((const char*)"/tmp/file.txt");
      |        ^
build/output.c:17:8: note: did you mean 'arca_path_parent'?
library/runtime/arca_runtime.h:115:13: note: 'arca_path_parent' declared here
  115 | const char* arca_path_parent(const char* path);
      |             ^
build/output.c:20:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   20 |   v3 = arca_path_join((const char*)"/tmp", (const char*)"notes.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: foreach.test.arca
File: tests/features/foreach.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/foreach.test.arca
6
Result: PASS
-----------------------------------------
Test Name: fs.test.arca
File: tests/features/fs.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/fs.test.arca
0
-1
Result: PASS
-----------------------------------------
Test Name: fs_full.test.arca
File: tests/features/fs_full.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/fs_full.test.arca
50
Result: PASS
-----------------------------------------
Test Name: functions.test.arca
File: tests/features/functions.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/functions.test.arca
55
Result: PASS
-----------------------------------------
Test Name: if_else.test.arca
File: tests/features/if_else.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:23:17: warning: using integer absolute value function 'llabs' when argument is of floating point type [-Wabsolute-value]
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^
build/output.c:23:17: note: use function 'fabs' instead
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^~~~~
      |                 fabs
1 warning generated.
[arca] Running: tests/features/if_else.test.arca
3
0
1
99
16807
Result: PASS
-----------------------------------------
Test Name: impl.test.arca
File: tests/features/impl.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/impl.test.arca
/Users/hy4-mac-002
Result: PASS
-----------------------------------------
Test Name: io.test.arca
File: tests/features/io.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:15:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   15 |   v3 = (int64_t)arca_current_dir();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: json.test.arca
File: tests/features/json.test.arca
Duration: 5s
Runtime Stdout:
[arca] Running: tests/features/json.test.arca
1
99
Result: PASS
-----------------------------------------
Test Name: loop.test.arca
File: tests/features/loop.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/loop.test.arca
6
Result: PASS
-----------------------------------------
Test Name: match.test.arca
File: tests/features/match.test.arca
Duration: 27s
Runtime Stdout:
build/output.c:11:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   11 |   v0 = (const char*)arca_path_extension((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:14:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   14 |   v1 = (const char*)arca_path_filename((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:17:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   17 |   v2 = (const char*)arca_path_parent((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:20:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   20 |   v3 = (const char*)arca_path_join((const char*)"/tmp", (const char*)"notes.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: match_payload.test.arca
File: tests/features/match_payload.test.arca
Duration: 4s
Runtime Stdout:
[arca] Running: tests/features/match_payload.test.arca
42
Result: PASS
-----------------------------------------
Test Name: math.test.arca
File: tests/features/math.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:23:17: warning: using integer absolute value function 'llabs' when argument is of floating point type [-Wabsolute-value]
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^
build/output.c:23:17: note: use function 'fabs' instead
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^~~~~
      |                 fabs
1 warning generated.
[arca] Running: tests/features/math.test.arca
3
0
1
99
16807
Result: PASS
-----------------------------------------
Test Name: method.test.arca
File: tests/features/method.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/method.test.arca
hello Alice
Result: PASS
-----------------------------------------
Test Name: move.test.arca
File: tests/features/move.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/move.test.arca
100
Result: PASS
-----------------------------------------
Test Name: none.test.arca
File: tests/features/none.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/none.test.arca
0
Result: PASS
-----------------------------------------
Test Name: option.test.arca
File: tests/features/option.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/option.test.arca
1
99
Result: PASS
-----------------------------------------
Test Name: parse_int.test.arca
File: tests/features/parse_int.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/parse_int.test.arca
123
Result: PASS
-----------------------------------------
Test Name: path.test.arca
File: tests/features/path.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:11:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   11 |   v0 = (const char*)arca_path_extension((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:14:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   14 |   v1 = (const char*)arca_path_filename((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:17:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   17 |   v2 = (const char*)arca_path_parent((const char*)"/tmp/file.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:20:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   20 |   v3 = (const char*)arca_path_join((const char*)"/tmp", (const char*)"notes.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: path_full.test.arca
File: tests/features/path_full.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/path_full.test.arca
/usr/bin
Result: PASS
-----------------------------------------
Test Name: process.test.arca
File: tests/features/process.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/process.test.arca
0
-1
Result: PASS
-----------------------------------------
Test Name: ref_ptr.test.arca
File: tests/features/ref_ptr.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/ref_ptr.test.arca
50
Result: PASS
-----------------------------------------
Test Name: result.test.arca
File: tests/features/result.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/result.test.arca
55
Result: PASS
-----------------------------------------
Test Name: sleep.test.arca
File: tests/features/sleep.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/sleep.test.arca
0
Result: PASS
-----------------------------------------
Test Name: spawn.test.arca
File: tests/features/spawn.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/spawn.test.arca
100
Result: PASS
-----------------------------------------
Test Name: string.test.arca
File: tests/features/string.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/string.test.arca
hello  
1
1
Result: PASS
-----------------------------------------
Test Name: string_slice.test.arca
File: tests/features/string_slice.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/string_slice.test.arca
1
Result: PASS
-----------------------------------------
Test Name: strings.test.arca
File: tests/features/strings.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/strings.test.arca
1
6
Result: PASS
-----------------------------------------
Test Name: struct.test.arca
File: tests/features/struct.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/struct.test.arca
1
24
Result: PASS
-----------------------------------------
Test Name: throw.test.arca
File: tests/features/throw.test.arca
Duration: 4s
Runtime Stdout:
[arca] Running: tests/features/throw.test.arca
1
Result: PASS
-----------------------------------------
Test Name: to_string.test.arca
File: tests/features/to_string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/to_string.test.arca
456
Result: PASS
-----------------------------------------
Test Name: try_catch.test.arca
File: tests/features/try_catch.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/try_catch.test.arca
trying
caught
Result: PASS
-----------------------------------------
Test Name: variables.test.arca
File: tests/features/variables.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/variables.test.arca
10
Result: PASS
-----------------------------------------
Test Name: while_loop.test.arca
File: tests/features/while_loop.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/while_loop.test.arca
1
1
1
1
1
1
Result: PASS
-----------------------------------------
Test Name: ai.test.arca
File: tests/std-libs/ai.test.arca
Duration: 0s
Runtime Stdout:
error: Unknown struct type 'Tensor'

error: Unknown struct type 'Dataset'

error: Unknown struct type 'Tokenizer'

error: Unknown struct type 'OpenAI'
Result: FAIL
